2010-05-12  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Slave losts cause build break on bots
        https://bugs.webkit.org/show_bug.cgi?id=38980

        * Scripts/build-webkit: Remove 0 byte sized files from productDir before build.

2010-05-12  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed trivial fix after r59254.

        * Scripts/old-run-webkit-tests:

2010-05-12  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Eric Seidel.

        run-webkit-tests --exit-after-N-failures should not count new tests as failures
        https://bugs.webkit.org/show_bug.cgi?id=31829

        * Scripts/old-run-webkit-tests:

2010-05-12  James Robinson  <jamesr@chromium.org>

        Reviewed by Simon Fraser.

        Disable smooth scrolling on OS X when running tests
        https://bugs.webkit.org/show_bug.cgi?id=38964

        Some tests (like fast/repaint/fixed-move-after-keyboard-scroll.html)
        depend on smooth scrolling behavior.  Since this is off by default
        in Leopard and on by default in Snow Leopard, DRT should turn it
        off always to ensure a consistent test environment.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):

2010-05-10  Rodrigo Belem  <rodrigo.belem@openbossa.org>

        Reviewed by Kenneth Christiansen , Simon Hausmann and Gustavo Noronha.

        [Qt, Gtk] Allows build-webkit script to receive an install prefix as parameter
        https://bugs.webkit.org/show_bug.cgi?id=26224

        Added more parameters to build-webkit script, the --prefix for gkt
        and --install-libs, --install-headers for qt. Now it is possible
        to change the install prefix for gtk and install path for qt.

        * Scripts/build-webkit:
        * Scripts/webkitdirs.pm:

2010-05-12  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, added my IRC nickname.

        * Scripts/webkitpy/common/config/committers.py:
